# VideoPlayer

./: .gitignore
Netbeans/nbproject/: project.properties  project.xml
bash/: video_player.sh
html/: index.html  index_old.html
html/CSS/: style.css
html/js/: global.js  script.js  video_player.js
html/scripts/: global.js  script.js
mysql/: video_player.sql
utilities/get_file/: .cproject  .project
utilities/get_file/Debug/: get_file  makefile  objects.mk
utilities/get_file/Debug/src/: get_file.d  subdir.mk
utilities/get_file/src/: CMakeLists.txt  get_file.c
